# SingularityTools

./: .gitignore  README.md
Builder/: .gitignore
Builder/BuilderClient/: README.md  builder.sh  ubuntu-simple.def
Builder/BuilderClient/cpp_crap/: CMakeLists.txt
Builder/BuilderServer/SSH_Sanitizer/: CMakeLists.txt  SSH_sanitizer.cpp
Builder/BuilderServer/ServerControl/: create_builder_vm.sh  destroy_builder_vm.sh  openrc.sh
Builder/BuilderServer/ServerScripts/: Dockerfile  apparmour.builder  init_builder.sh
Builder/Client/: README.md  SingularityBuilder  builder.sh  ubuntu.def
Builder/Client/cpp_crap/: singularity_builder.cpp  singularity_builder.cpp.messy
Builder/Server/BuilderControl/: BringUp  BringUpBasic  OpenStack.cer  README.md  TearDown
Builder/Server/InitScripts/: Builder  BuilderVagrantfile  Dockerfile  Dockerfile.ppc  Vagrantfile  init_builder.sh  init_builder_docker.sh  init_builder_docker_x86_only.sh  vagrant_builder_provision.sh
Builder/Server/InitScripts/OpenStack/: Dockerfile  SingularityBackend.sh  init_builder_docker.sh  init_builder_docker_x86_only.sh
Builder/Server/SSH_Builder/: CMakeLists.txt
Builder/Server/SSH_Builder/include/: signal_handler.h  singularity_builder.h  ssh_sanitizer.h
Builder/Server/SSH_Builder/src/: signal_handler.cpp  singularity_builder.cpp  ssh_sanitizer.cpp  tests.cpp
Builder/Server/SSH_Sanitizer/: CMakeLists.txt  SSH_sanitizer.cpp  tests.cpp
Builder/Server/SSH_Sanitizer/src/: main.cpp  ssh_sanitizer.cpp
Builder/Server/SafeSH/: CMakeLists.txt  README.md
Builder/Server/SafeSH/include/: build_queue.h  docker_backend.h  resource_manager.h  signal_handler.h  sql_db.h  ssh_sanitizer.h  vagrant_backend.h  vagrant_builder.h
Builder/Server/SafeSH/src/: build_queue.cpp  builder_diag.cpp  docker_backend.cpp  resource_manager.cpp  safe_sh.cpp  signal_handler.cpp  sql_db.cpp  ssh_sanitizer.cpp  tests.cpp  vagrant_backend.cpp  vagrant_builder.cpp
Builder/Server/SafeSH/tests/: build_queue.cpp  main.cpp  resource_manager.cpp  ssh_sanitizer.cpp  tests.cpp  utilities.cpp  utilities.h
Builder/Server/Scripts/: SingularityBuilder  init_builder.sh
Builder/Server/ServerControl/: ContainerBuilderIP  ContainerBuilderKey  create_builder_vm.sh  destroy_builder_vm.sh
Builder/Server/ServerScripts/: Dockerfile  SingularityBuilder  init_builder.sh
Builder/Server/SingularityBuilder/: CMakeLists.txt  singularity_builder.cpp
Summit/: 2.2.1  2.3.1  98-OLCF.sh  SummitPrep.sh  rtld.sub  singularity
Summit/CentosBase/: Centos7.def  HelloMPI.c  README.md
Summit/R/: Ubuntu.def
Summit/Tensorflow/: 1.1.0  1.4.0  README.txt  tensor_test.py  tensorflow.def  tensorflow_centos.def  tensorflow_ubuntu.def
Summit/UbuntuBase/: README.md  Ubuntu.def  UbuntuTitan.def
Titan/: 2.2.1  2.3.1  2.3.1.no_MPI  98-OLCF.sh  README.md  TitanBootstrap.sh  TitanPrep.sh  patch_singularity_titan.sh  rtld.sub  singularity
Titan/BaseExample/: README.md  Titan.def
Titan/BasicExample/: CentosTitan.def  README.md
Titan/CentosBase/: Centos7.def  CentosTitan.def  README.md
Titan/Example/: README.md  Titan.def
Titan/OpenMPI/: README.txt  build_omp.sh  ompi_zesty.def  ompi_zesty_test.def
Titan/OpenMPI-Testing/: README.md
Titan/OpenMPI-Testing/OpenMPI-builder/: README.txt
Titan/OpenMPI-Testing/OpenMPI-builder/DEB_files/: libopenmpi2.links.in  rules
Titan/OpenMPI-Testing/UbuntuBase-OpenMPI/: pre_a
Titan/OpenMPI-build/: README.txt  build_omp.sh  control  helloMPI.c  libopenmpi2.links.in  ompi_mpi4py_zesty_test.def  ompi_zesty.def  ompi_zesty_test.def  rules
Titan/OpenMPI-builder/: ompi_zesty.def  ompi_zesty_test.def
Titan/OpenMPI/DEB_files/: libopenmpi2.links.in
Titan/Tensorflow/: 1.1.0  1.3.0  README.txt  tensorflow.def
Titan/UbuntuBase/: HelloCuda.cu  HelloMPI.py  README.md  UbuntuTitan.def  Ubuntu_17.04.def
Titan/UbuntuBase-OpenMPI/: README.md  a.out  crap
